clean code & new menu